--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 fancybox: true ## 是否启用Fancybox图片灯箱效果 true/false.
-duoshuo: sevennight ## 多说用户名,为空则不使用
-disqus:  ## disqus用户名，为空则不使用
+duoshuo: ## 多说用户名,为空则不使用
+disqus: ## disqus用户名，为空则不使用
 google_search: true ## 使用google搜索引擎, true/false.
 baidu_search: ## 使用百度搜索引擎, true/false.
 swiftype: ## Swiftype 站内搜索key
